# stream-magic-mcp

./: README.md  debug_discovery.py  debug_dlna.py  debug_search.py  pyproject.toml  reproduce_issue.py
scripts/: client_test.py
src/streammagic_mcp/: discovery.py  dlna.py  server.py
tests/: test_server.py
web_client/: backend.py
web_client/static/: app.js  index.html  style.css
